--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
+   <ItemGroup>
+     <Folder Include="Helpers\" />
+   </ItemGroup>
+
 </Project>
