--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
+   <ItemGroup>
+     <Folder Include="wwwroot\imgs\" />
+   </ItemGroup>
+
 </Project>
