--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="compilerconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -25,6 +29,10 @@
 
    <ItemGroup>
      <Folder Include="wwwroot\imgs\" />
+   </ItemGroup>
+
+   <ItemGroup>
+     <None Include="compilerconfig.json" />
    </ItemGroup>
 
 </Project>
